--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import logoImage from "../../public/seguros-monterrey-new-york-life-logo.png";
 
 const segurosIndividuales = [
   {
-    name: "Seguros de Salud",
+    name: "Seguro Gastos Médicos",
     href: "/seguros-salud", // Página principal de la categoría (opcional)
     items: [
       { name: "Alfa Medical", href: "/seguros-salud/alfa-medical" },
